# microROS-on-the-cloud

./: .gitmodules  LICENSE  README.md  run.sh
app/: configure.sh
app/microros_ws/src/microROS_messages/lib/microROS/: microROS.cpp  (+1 more)
app/microros_ws/src/microROS_messages/src/: main.cpp
app/robot_ws/firmware/: APP  PLATFORM
app/robot_ws/firmware/dev_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
app/robot_ws/firmware/dev_ws/log/: latest_build
app/robot_ws/firmware/dev_ws/my_custom_message/: CMakeLists.txt
app/robot_ws/firmware/mcu_ws/camera_message/: CMakeLists.txt
app/robot_ws/firmware/mcu_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
app/robot_ws/firmware/mcu_ws/log/: latest_build  latest_list
app/robot_ws/firmware/mcu_ws/my_custom_message/: CMakeLists.txt  package.xml
app/robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
app/robot_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
app/robot_ws/install/microxrcedds_client/lib/: libmicroxrcedds_client.so.2.4.2
app/robot_ws/log/: latest_build
app/robot_ws/src/microROS_messages/: platformio.ini
app/robot_ws/src/microROS_messages/src/: main.cpp
app/ros2_ws/src/esp32_camera_subscriber/: package.xml  setup.cfg  setup.py
app/ros2_ws/src/esp32_camera_subscriber/esp32_camera_subscriber/: sign_recognition.py
app/ros2_ws/src/sensor_micro_msgs/: package.xml
esp32_camera_subscriber/: package.xml  setup.py
esp32_camera_subscriber/esp32_camera_subscriber/: camera.py
microROS_messages/: platformio.ini
microROS_messages/extra_packages/sensor_micro_msgs/: package.xml
microROS_messages/lib/microROS/: microROS.cpp  microROS.h
microROS_messages/lib/screen/: screen.cpp  screen.h
microROS_messages/src/: main.cpp
sensor_micro_msgs/: CMakeLists.txt  package.xml
src/sensor_micro_msgs/: package.xml
(+525 files in other folders)
