<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esp32_camera_subscriber</name>
  <version>1.0.0</version>
  <description>This package contains the nodes to check the image sent by microROS, and process the image sent</description>
  <maintainer email="miguel_gonzalezr@javeriana.edu.co">Miguel Angel Gonzalez Rodriguez</maintainer>
  <license>BSD-3-Clause</license>

  <depend>sensor_msgs</depend>
  <depend>sensor_mciro_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
